test/fail/vt_list01.v3
//@execute 0=true; 1=false
type List<T> {
	case None;
	case Cons(head: T, tail: List<T>);
}
var x = List.Cons(4, List.Cons(3, List<int>.None));
var y = List.Cons(4, List.Cons(3, List<int>.None));
def main(a: int) -> bool {
	if (a == 0) return x == y;
	return x != y;
}